modify and add users link in nav tag

--- a/dashbord.html
+++ b/dashbord.html
@@ -10,7 +10,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>Document</title>
+    <title>Dashboard</title>
 
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/responsive.css" />
@@ -27,14 +27,8 @@
       <strong>General</strong>
       <nav>
         <ul>
-          <li>Dashboard</li>
-          <li class="drop-down-2">
-            Widgets
-            <ul>
-              <li>clock</li>
-              <li>weather</li>
-            </ul>
-          </li>
+          <li><a href="dashbord.html">Dashboard</a></li>
+          <li><a href="users.html">Users</a></li>
           <li>Elements</li>
           <li>Tables</li>
           <li class="drop-down-2">
